@@ -26,7 +26,7 @@ basic-jenkins-maven-project/
 
 ## Features
 
-- **Java 11** compatibility
+- **Java 21** compatibility
 - **JUnit 5** for testing
 - **JaCoCo** for code coverage
 - **Jenkins Pipeline** configuration
@@ -34,31 +34,167 @@ basic-jenkins-maven-project/
 
 ## Prerequisites
 
-- Java 11 or higher
+- Java 21 or higher
 - Maven 3.6 or higher
 - Jenkins with required plugins
 
 ## Local Development
 
-### Build the project
+### Essential Maven Commands
+
+#### Build & Compile
 ```bash
+# Clean the project (removes target directory)
+mvn clean
+
+# Compile source code only
+mvn compile
+
+# Compile source + test code
+mvn test-compile
+
+# Clean and compile (recommended for fresh builds)
 mvn clean compile
 ```
 
-### Run tests
+#### Testing
 ```bash
+# Run all tests with code coverage report
 mvn test
+
+# Skip tests during other phases
+mvn package -DskipTests
 ```
 
-### Package the application
+#### Packaging & Installation
 ```bash
+# Create JAR file (includes compile + test + package)
 mvn package
+
+# Install to local Maven repository
+mvn install
+
+# Verify project integrity
+mvn verify
 ```
 
-### Run the application
+#### Running the Application
 ```bash
+# Method 1: Direct Java execution
 java -cp target/classes com.example.app.App
+
+# Method 2: Using Maven exec plugin
+mvn exec:java -Dexec.mainClass="com.example.app.App"
+
+# Method 3: Run JAR file (requires main class configuration in pom.xml)
+# Currently not configured - use Method 1 or 2 instead
 ```
+
+#### Project Information & Reports
+```bash
+# View dependency tree
+mvn dependency:tree
+
+# Generate project site with reports
+mvn site
+
+# View all available plugins and goals
+mvn help:describe -Dplugin=help
+```
+
+#### Complete Lifecycle Commands
+```bash
+# Full build lifecycle (clean → compile → test → package)
+mvn clean package
+
+# Full build with installation to local repository
+mvn clean install
+
+# Full verification including integration tests
+mvn clean verify
+```
+
+#### Code Coverage & Quality
+```bash
+# Run tests with JaCoCo coverage report
+mvn test
+
+# View coverage report at: target/site/jacoco/index.html
+open target/site/jacoco/index.html
+
+# Generate comprehensive project documentation
+mvn site
+open target/site/index.html
+```
+
+#### Development Troubleshooting
+```bash
+# Debug Maven execution with verbose output
+mvn clean compile -X
+
+# Show effective POM (resolved properties and inheritance)
+mvn help:effective-pom
+
+# Display project dependencies
+mvn dependency:list
+
+# Check for dependency conflicts
+mvn dependency:analyze
+
+# Update snapshots and releases
+mvn clean install -U
+
+# Offline mode (use only local repository)
+mvn clean compile -o
+```
+
+#### Performance & Optimization
+```bash
+# Parallel builds (use multiple CPU cores)
+mvn clean install -T 4
+
+# Skip documentation generation for faster builds
+mvn clean install -Dmaven.javadoc.skip=true
+
+# Memory optimization for large projects
+export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=256m"
+mvn clean install
+```
+
+#### Useful Maven Properties
+```bash
+# Skip tests entirely
+mvn clean install -DskipTests=true
+
+# Skip compilation of test sources
+mvn clean install -Dmaven.test.skip=true
+
+# Force update of snapshots and releases
+mvn clean install -Dfork=true -U
+
+# Run specific test class
+mvn test -Dtest=AppTest
+
+# Run specific test method
+mvn test -Dtest=AppTest#testGetMessage
+```
+
+### Project Output Files
+After running Maven commands, you'll find generated files in:
+- `target/classes/` - Compiled main source code
+- `target/test-classes/` - Compiled test source code  
+- `target/surefire-reports/` - Test execution reports
+- `target/site/jacoco/` - Code coverage reports
+- `target/site/` - Project documentation (after `mvn site`)
+- `target/*.jar` - Packaged JAR files (after `mvn package`)
+
+### Java 21 Features
+This project is configured to use Java 21 LTS, which includes:
+- Virtual Threads (Project Loom)
+- Pattern Matching for switch expressions
+- Record patterns
+- String templates (preview)
+- Foreign Function & Memory API improvements
 
 ## Jenkins Setup
 
